# estate-dao-platform-leptos-ssr

./: .dockerignore  .gitignore  .windsurfrules  0001-block_room-api-error-unresolved.patch  0001-buggy-destination_dynamic.patch  0002-everything-works-except-API-s.patch  0002-fix.patch  0003-buggy-destination_dynamic.patch  CI_BUILD_FIX_CHECKLIST.md  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  Dockerfile  Dockerfile.debian.prod  Dockerfile.debian.staging  Dockerfile_exp  Dockerfile_local  Dockerfile_prod  FINAL_MIGRATION_STATUS.md  LEPTOS_0.8_CI_FIX_SUMMARY.md  LEPTOS_0.8_MIGRATION_PLAN.md  LEPTOS_MIGRATION_PLAN.md  MIGRATION_PROGRESS_SUMMARY.md  MIGRATION_STATUS.md  Questions.md  README.md  city.json  city.parquet  docker-compose.yml  facilities.json  fly-prod.toml  fly-staging.toml  fly.toml  justfile  lessons_learnt.md  package-lock.json  package.json  rust-toolchain.toml  rustc-ice-2025-10-19T08_37_18-28703.txt  rustc-ice-2025-10-19T08_37_18-28704.txt  (+13 more)
bg-ractor/: Cargo.toml
bg-ractor/src/: cities.rs  lib.rs  main.rs
duck-searcher/: Cargo.toml
duck-searcher/src/: lib.rs  main.rs
hotel-providers/: Cargo.toml  DESIGN.md
hotel-providers/src/: composite.rs  lib.rs  registry.rs
hotel-providers/src/adapters/: mod.rs
hotel-providers/src/adapters/liteapi/: mod.rs
hotel-providers/src/amadeus/: client.rs  driver.rs  mapper.rs  mod.rs
hotel-providers/src/booking/: client.rs  driver.rs  mapper.rs  mod.rs
hotel-providers/src/domain/: booking_types.rs  hotel_search_types.rs  mod.rs
hotel-providers/src/liteapi/: client.rs  driver.rs  grouping.rs  mapper.rs  mod.rs
hotel-providers/src/ports/: hotel_port.rs  mod.rs  place_port.rs
hotel-providers/tests/: amadeus_identity.rs
ssr/: Cargo.toml  build.rs  tailwind.config.js
ssr/did/: backend.did  canister_ids.json
ssr/src/: app.rs  basic_auth.rs  debug_routes.rs  domain_middleware.rs  facebook.rs  fallback.rs  init.rs  lib.rs  logging.rs  main.rs  oauth.rs  server_functions_impl_custom_routes.rs  sitemap.rs
ssr/src/adapters/: mod.rs  provab_adapter.rs  provider_bridge.rs
ssr/src/api/: a00_search.rs  a01_hotel_info.rs  a02_get_room.rs  a03_block_room.rs  a04_book_room.rs  a05_hotel_booking_detail.rs  api_client.rs  cities_api_provider.rs  client.rs  client_side_api.rs  consts.rs  core_travel_types.rs  mod.rs  retry.rs  search.rs  server_functions_examples.rs  server_functions_impl.rs  sse_payments.rs  types.rs
ssr/src/api/auth/: mod.rs  (+9 more)
ssr/src/application_services/: booking_service.rs  filter_types.rs  hotel_service.rs  mod.rs  places_service.rs
ssr/src/component/: api_error_popup_component.rs  base_route.rs  code_print.rs  crypto_carousel.rs  currency_selector_modal.rs  data_table_3.rs  date_time_range_picker.rs  destination.rs  destination_picker.rs  destination_section.rs  divider.rs  doc_view.rs  error_popup.rs  estatedao_icon.rs  faq.rs  feature_section.rs  feedback_section.rs  filter.rs  filter_and_sort_by.rs  footer.rs  full_screen_mobile_banner.rs  gtag.rs  guest_quantity.rs  h_settings.rs  hotel_map.rs  image_lightbox.rs  input_component.rs  live_select.rs  live_select_example.rs  loading_button.rs  logout.rs  mod.rs  modal.rs  most_popular.rs  my_account_tabs.rs  navbar.rs  notification_listener.rs  number_counter.rs  outside_click_detector.rs  overlay.rs  (+12 more)
ssr/src/domain/: booking_service_types.rs  core_travel_typesaa.rs  mod.rs  service_types.rs
ssr/src/event_streaming/: events.rs  mod.rs
ssr/src/page/: about_us.rs  admin_edit_panel.rs  admin_panel.rs  block_room.rs  block_room_v1.rs  cancel_page.rs  confirmation.rs  confirmation_old.rs  confirmation_page_v1.rs  confirmation_page_v2.rs  hotel_details.rs  hotel_details_params.rs  hotel_details_v1.rs  hotel_list.rs  hotel_list_navbar.rs  hotel_list_params.rs  input_group_container.rs  input_group_mobile.rs  location_search.rs  mod.rs  my_accounts.rs  my_bookings.rs  root.rs  search_params.rs  wishlist.rs  yral_auth_redirect_handler.rs
ssr/src/ports/: hotel_provider_port.rs  mod.rs  traits.rs
ssr/src/server_functions_impl_custom_routes/: admin_error_alerts.rs  admin_payment.rs  admin_provider.rs  auth.rs  block_room.rs  book_room.rs  create_payment_invoice.rs  email_verification.rs  extract_identity_route.rs  get_hotel_details.rs  get_hotel_info.rs  get_hotel_rates.rs  integrated_block_room.rs  mod.rs  process_confirmation.rs  search_cities.rs  search_hotel.rs  search_places.rs  support_request.rs  update_email_principal_mapping.rs
ssr/src/ssr_booking/: booking_handler.rs  email_handler.rs  get_booking_from_backend.rs  mock_handler.rs  mod.rs  payment_handler.rs  pipeline.rs  pipeline_integration_test.rs  pipeline_lock.rs
ssr/src/state/: api_error_state.rs  confirmation_results_state.rs  hotel_details_state.rs  input_group_state.rs  local_storage.rs  mod.rs  search_state.rs  view_state.rs
ssr/src/utils/: admin.rs  app_reference.rs  backend_default_impl.rs  backend_integration_helpers.rs  booking_backend_conversions.rs  booking_id.rs  booking_state_storage.rs  browser.rs  colored_print.rs  cookie_storage.rs  currency.rs  date.rs  domain_normalize.rs  error_alerts.rs  error_middleware.rs  estate_tracing.rs  event_stream.rs  facilities.rs  geoip_service.rs  host.rs  hotel_images.rs  ic.rs  icon.rs  mod.rs  notifier.rs  notifier_event.rs  otp_storage.rs  parent_resource.rs  provider_keys.rs  query_params.rs  responsive.rs  route.rs  search_action.rs  sort_json.rs  string_ext.rs  tokio_event_bus.rs
ssr/src/view_state_layer/: api_error_state.rs  booking_context_state.rs  booking_conversions.rs  booking_id_state.rs  confirmation_results_state.rs  cookie_booking_context_state.rs  email_verification_state.rs  hotel_details_state.rs  input_group_state.rs  local_storage.rs  mod.rs  my_bookings_state.rs  search_state.rs  ui_block_room.rs  ui_bookings_state.rs  ui_confirmation_page.rs  ui_confirmation_page_v2.rs  ui_hotel_details.rs  ui_hotel_info.rs  ui_search_state.rs  user_auth_state.rs  view_state.rs
ssr/src/web_api_translator/: mod.rs  search_fns.rs  types.rs
ssr/style/: input.css
telemetry_axum/: Cargo.toml
telemetry_axum/src/: lib.rs
(+141 files in other folders)
