[workspace]
members = ["ssr", "telemetry_axum","bg-ractor", "duck-searcher"]
resolver = "2"

[workspace.package]
publish = false
edition = "2021"


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[workspace.dependencies] 

opentelemetry = { version = "*" , features = ["trace"]}
opentelemetry-otlp = { version = "*", default-features = false, features = [
  "reqwest-rustls",
  "http-proto",
  "tls",
  "grpc-tonic"
] }

opentelemetry-appender-tracing = { version = "*" }
opentelemetry-http = { version = "*" }
tracing-opentelemetry = { version = "*" }
opentelemetry_sdk = { version = "*" }

thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"


tracing = { version = "0.1" }
tracing-subscriber =  { version = "0.3.19", features = ["std", "env-filter"] }
tracing-appender = { version = "0.2.0" }


tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs","cors","trace"] }
tower-layer = {version =  "0.3.2"}

http = "1.3"
yral-types = { git = "https://github.com/dolr-ai/yral-common.git", branch = "master" }
ractor = "0.15.8"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

#### app dependencies

base64ct = {version = "1.6.0"}
telemetry_axum = {path = "./telemetry_axum"}

