[package]
name = "duck-searcher"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[lib]
name = "duck_searcher"
path = "src/lib.rs"

[[bin]]
name = "duck-searcher"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[dependencies]
duckdb = { version = "1.3.2", features = ["bundled", "r2d2"] }
