[package]
name = "duck-searcher"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[lib]
name = "duck_searcher"
path = "src/lib.rs"

[[bin]]
name = "duck-searcher"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[dependencies]
anyhow = {workspace = true }
duckdb = { version = "1.3.2", features = ["bundled", "r2d2"] }
r2d2 = "0.8"
arrow = { version = "55.2.0", features = ["json", "ipc"] }
serde = { workspace = true }
serde_json = { workspace = true }
