[package]
name = "hotel-providers"
version = "0.1.0"
edition = "2021"

[features]
default = []
liteapi = ["dep:reqwest"]
mock = []

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
hotel-types = { path = "../hotel-types" }

# Optional: only needed for real HTTP providers
reqwest = { version = "0.12", features = ["json"], optional = true }

# For serde path error reporting
serde_path_to_error = "0.1"

